--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body {
+* {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -10,4 +10,25 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-around;
+  width: 100vw;
+  background-color: #BBEDB5;
+}
+
+.navbar h2 {
+  margin: 10px 0px 10px;
+}
+
+.navbar a {
+  width: 20%;
+  text-align: center;
+  transition: .5s;
+}
+
+.navbar a:hover {
+  backdrop-filter: brightness(80%);
 }
