--- a/src/index.scss
+++ b/src/index.scss
@@ -18,10 +18,15 @@ code {
 }
 
 .navbar {
+  position: fixed;
   display: flex;
   justify-content: space-around;
   width: 100vw;
   background-color: $pastel-green;
+  top: 0;
+  left:0;
+  z-index: 5;
+  box-shadow: 0px 0px 5px 5px $pastel-green;
 }
 
 .navbar h2 {
@@ -43,39 +48,46 @@ code {
 .home {
   width: 80vw;
   margin:auto;
-  margin-top: 25px;
-
-  .splashbr {
-    height: 20vh;
-    content: '';
-    margin-bottom: 100px;
-  }
-
-  > h1 {
-    color: white;
-    font-size: 50px;
-    text-align: center;
-    position: sticky;
-    top: 50px;
-    background-color:rgb(187, 237, 181);
-    margin: auto;
-    border-radius: 30px;
-    padding: 25px;
-  }
 
   img {
     position: fixed;
-    top:0px;
-    left:0px;
-    z-index: -1;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
     object-fit: cover;
+    z-index: -2;
   }
-  
-  p {
-    top: 100%;
+
+  .splash-title {
+    margin: auto;
+    margin-top: 20%;
+    width: 375px;
+  }
+
+  h1 {
+    position: sticky;
+    top: 50px;
+    text-align: center;
+    border-radius: 25px;
+    background-color: rgb(187, 237, 181, .8);
+    padding: 0px;
+    font-size: 100px;
+    box-shadow: 0px 0px 10px 10px rgb(187, 237, 181, .8);
+  }
+
+  .hidden-splash {
     position: absolute;
-    height: 1000px;
+    top: 105%;
+    padding: 20px;
+    width: 40%;
+    background-color: rgb(255, 255, 255, .8);
+    box-shadow: 0px 0px 10px 10px black;
+    border-radius: 10px;
+    margin-bottom: 100px;
+  }
+
+  .splash-flex {
+    display: flex;
   }
 }
