--- a/src/index.scss
+++ b/src/index.scss
@@ -181,6 +181,9 @@ code {
         * {
           width: 500px;
         }
+        .title-row, .title-row2 {
+          padding-left: 25px;
+        }
       }
 
       .odd {
