--- a/src/index.scss
+++ b/src/index.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&display=swap');
 
 
@@ -31,23 +31,26 @@ code {
   top: 0;
   left:0;
   z-index: 5;
+  background-color: rgb(0, 0, 0, .4);
+  box-shadow: 0px 0px 20px 20px rgb(0, 0, 0, .4);
 }
 
 .navbar h2 {
   margin: 10px 0px 10px;
+  color: white;
 }
 
 .navbar button {
   width: 20%;
   text-align: center;
-  transition: 2s;
+  transition: .2s;
   background-color: transparent;
   border: none;
   cursor: pointer;
 }
 
 .navbar button:hover {
-  backdrop-filter: brightness(80%);
+  text-shadow: 2px 2px 3px black;
 }
 
 .home {
@@ -88,7 +91,8 @@ code {
     left: 47.5%;
     width:5%;
     border-radius: 10px;
-    background-color:#BBEDB5;
+    background-color:rgba(255, 255, 255, 0.8);
+    border: none;
     cursor: pointer;
   }
 
@@ -103,6 +107,8 @@ code {
     margin: auto;
     h2, p {
       padding: 10px;
+      text-align: center;
+      font-size: larger;
     }
   }
 
@@ -112,8 +118,8 @@ code {
     justify-content: space-between;
     img {
       width:10%;
-      position: absolute;
-      top: -153px;
+      position: relative;
+      top: 15px;
       left: 45%;
     }
   }
@@ -133,6 +139,7 @@ code {
     width: 80%;
     position: absolute;
     top: 50px;
+    margin-top: 100px;
     margin-left: 10%;
     margin-right: 10%;
 
@@ -154,13 +161,12 @@ code {
       display: flex;
       flex-direction: column;
       backdrop-filter: blur(10px);
-      outline: 1px solid #ECBEFD;
       border-radius: 15px;
       margin-top: 50px;
       font-weight: bolder;
       font-size: large;
       text-align: center;
-      box-shadow: 0px 0px 5px 5px gray;
+      box-shadow: 0px 0px 5px 5px #ECBEFD;
       .title-row {
         background-color: #ECBEFD;
         padding: 10px;
@@ -197,6 +203,67 @@ code {
         border-bottom-left-radius: 15px;
         border-bottom-right-radius: 15px;
       }
+    }
+  }
+}
+
+.schedule {
+  > img {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    object-fit: cover;
+    z-index: -2;
+  }
+
+  > div {
+    width: 200px;
+    margin: auto;
+  }
+
+  .sign-up-form {
+    margin: auto;
+    display: flex;
+    margin-top: 100px;
+  }
+}
+
+.gallery {
+  > div {
+    width: 200px;
+    margin: auto;
+    margin-top: 80px;
+
+  }
+
+  h1 {
+    text-align: center;
+    background-color: #FFEE8A;
+    border-radius: 15px;
+    padding: 10px;
+    box-shadow: 0px 0px 5px 5px #FFEE8A;
+  }
+
+  .flex-gallery {
+    position: fixed;
+    top: -80px;
+    height: 100vh;
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    overflow-y: scroll;
+    z-index: -1;
+
+    >div {
+      margin: 0px 1000px 0px 1000px;
+    }
+
+    img {
+      width: 33%;
+      margin-top: 10px;
     }
   }
 }
