--- a/src/index.scss
+++ b/src/index.scss
@@ -9,10 +9,6 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-body {
-  overflow: hidden;
-}
-
 /***********/
 /**COLORS***/
 /***********/
@@ -24,7 +20,6 @@ code {
 }
 
 .navbar {
-  position: fixed;
   display: flex;
   justify-content: space-around;
   align-items: flex-start;
@@ -53,12 +48,12 @@ code {
 }
 
 .navbar button:hover {
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .home {
   margin: auto;
-  margin-top: 25vh;
+  margin-top: 50px;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -110,26 +105,15 @@ code {
 }
 
 .pricing {
-  width: 60vw;
-  margin: auto;
-  margin-top: 25vh;
   .price-container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
+    width: 80vw;
+    margin: auto;
+    text-align: center;
     .price-item {
-      width: 29.5vw;
-      height: 10vw;
-      text-align: center;
-      background-color: rgb(234,224,222);
-      margin-bottom: .5vw;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      h1 {
-        font-size: vw;
-      }
+      width: 50%;
     }
   }
 }
