--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@ code {
   top: 0;
   left:0;
   z-index: 5;
+  background-color: rgba(255, 255, 255, 1);
   img {
     height: 17vh;
   }
@@ -113,7 +114,16 @@ code {
     margin: auto;
     text-align: center;
     .price-item {
-      width: 50%;
+      width: 48%;
+      background-color: rgb(240, 211, 211);
+      margin: 1%;
+      padding: 20px 0px;
+      h1 {
+        font-weight: bold;
+      }
+      h2 {
+        font-weight: normal;
+      }
     }
   }
 }
@@ -142,39 +152,9 @@ code {
 }
 
 .gallery {
-  > div {
-    width: 200px;
+  img {
+    display: block;
+    width: 75%;
     margin: auto;
-    margin-top: 80px;
-
-  }
-
-  h1 {
-    text-align: center;
-    background-color: #FFEE8A;
-    border-radius: 15px;
-    padding: 10px;
-    box-shadow: 0px 0px 5px 5px #FFEE8A;
-  }
-
-  .flex-gallery {
-    position: fixed;
-    top: -80px;
-    height: 100vh;
-    display: flex;
-    width: 100%;
-    justify-content: space-around;
-    flex-wrap: wrap;
-    overflow-y: scroll;
-    z-index: -1;
-
-    >div {
-      margin: 0px 1000px 0px 1000px;
-    }
-
-    img {
-      width: 33%;
-      margin-top: 10px;
-    }
   }
 }
