--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,7 @@
 
 * {
   margin: 0;
+  padding: 0;
   font-family:'Montserrat';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -19,44 +20,117 @@ code {
     monospace;
 }
 
-.navbar {
-  display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  width: 100vw;
-  top: 0;
-  left:0;
-  z-index: 5;
-  background-color: rgba(255, 255, 255, 1);
-  img {
-    height: 17vh;
+/*NAVBAR*/
+@media (max-width: 849px) {
+  #navbar-small {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    position: absolute;
+    width: 50%;
+    left: -50%;
+    transition: 0.5s;
+    padding-top: 100px;
+    background-color: lightblue;
+    height: 100%;
+    button {
+      text-align: center;
+      transition: .2s;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid white;
+      cursor: pointer;
+      height: 90px;
+      h2 {
+        font-size: 25px;
+        color: black;
+      }
+    }
+    button:nth-child(4) {
+      border: none;
+    }
+    button:nth-child(1) {
+      border-top: 1px solid white;
+    }
+  }
+  #menu-small {
+    position: absolute;
+    z-index: 5;
+    padding: 5px;
+    background-color: transparent;
+    border: none;
+    top: 4vh;
+    left: 10%;
+    color: black;
+    #menu-icon {
+      height: 5vh;
+      color: black;
+    }
+  }
+  .navbar {
+    display: none;
+  }
+  .logo-small {
+    height: 15vh;
+    display: block;
+    margin: auto;
   }
 }
+@media (min-width: 850px) {
+  .navbar {
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    width: 100vw;
+    top: 0;
+    left:0;
+    z-index: 5;
+    background-color: rgba(255, 255, 255, 1);
+    img {
+      height: 17vh;
+    }
+  }
+  #menu-small {
+    display: none;
+  }
+  #navbar-small {
+    display: none;
+  }
+  .logo-small {
+    display: none;
+  }
 
-.navbar h2 {
-  margin: 10px 0px 10px;
-  color: #69443c;
-}
+  .navbar h2 {
+    margin: 10px 0px 10px;
+    color: #69443c;
+  }
 
-.navbar button {
-  width: 20%;
-  text-align: center;
-  transition: .2s;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  padding-top: 65px;
-}
+  .navbar button {
+    width: 20%;
+    text-align: center;
+    transition: .2s;
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    padding-top: 65px;
+  }
 
-.navbar button:hover {
-  font-size: 15px;
+  .navbar button:hover {
+    font-size: 15px;
+  }
 }
 
 .home {
   margin: auto;
   margin-top: 50px;
+  @media (max-width: 849px) {
+    margin-top: 0px;
+  }
   display: flex;
   flex-direction: row;
+  @media (max-width: 849px) {
+    flex-direction: column;
+  }
   justify-content: space-around;
   
   img {
@@ -65,6 +139,9 @@ code {
 
   .text-div, .pic-div {
     width: 48vw;
+    @media (max-width: 849px) {
+      width: 100vw;
+    }
   }
 
   .pic-div {
@@ -78,6 +155,9 @@ code {
   .text-div {
     display: flex;
     flex-direction: row;
+    @media (max-width: 849px) {
+      flex-direction: column;
+    }
     >div {
       margin-top: 5%;
     }
@@ -85,8 +165,15 @@ code {
 
   .subtext1 {
     width: 40%;
+    @media (max-width: 849px) {
+      width: 100%;
+    }
     h1 {
       font-size: 4.5vw;
+      @media (max-width: 849px) {
+        text-align: center;
+        font-size: 8vw;
+      }
     }
   }
 
@@ -98,9 +185,15 @@ code {
     h2 {
       font-size: 2vw;
       font-weight: 1;
+      @media (max-width: 849px) {
+        font-size: 5vw;
+      }
     }
     p {
       padding-top: 5%;
+    }
+    @media (max-width: 849px) {
+      margin: auto;
     }
   }
 }
@@ -120,6 +213,7 @@ code {
       padding: 20px 0px;
       h1 {
         font-weight: bold;
+        font-size: 29px;
       }
       h2 {
         font-weight: normal;
@@ -147,7 +241,14 @@ code {
   .sign-up-form {
     margin: auto;
     display: flex;
-    margin-top: 100px;
+    margin-top: 3vh;
+    width: 849px;
+    height: 78vh;
+    @media (max-width: 849px) {
+      margin-top: 0px;
+      height: 80vh;
+      width: 100%;
+    }
   }
 }
 
